# VisualAstro

./: .gitignore  README.md  THIRD_PARTY_LISCENSES.txt  pyproject.toml  setup.py
.github/workflows/: test.yml
AVS/: __init__.py  data_cube.py  io.py  photometry.py  plot_utils.py  reduction.py  spectra.py
AVS/stylelib/: astro.mplstyle  latex.mplstyle
examples/: color_guide.ipynb  colormaps.ipynb  quickstart.ipynb  style_guide.ipynb
examples/.ipynb_checkpoints/: quickstart-checkpoint.ipynb
src/: __init__.py  visual_plots.py
src/visualastro/: DataCube.py  ExtractedSpectrum.py  FitsFile.py  SpectrumPlus.py  __init__.py  config.py  data_class_utils.py  data_cube.py  data_cube_utils.py  datacube.py  error_propagation.py  fits_utils.py  fitsfile.py  io.py  numerical_utils.py  plot_utils.py  plotting.py  spectra.py  spectra_utils.py  text_utils.py  units.py  utils.py  va_config.py  validation.py  visual_classes.py  visual_plots.py  wcs_utils.py
src/visualastro/analysis/: ic.py  image_utils.py  spectra_utils.py
src/visualastro/core/: config.py  io.py  kwargs.py  numerical.py  numerical_utils.py  optional_deps.py  stats.py  units.py  validation.py
src/visualastro/dataclasses/: datacube.py  fitsfile.py  spectrumplus.py
src/visualastro/datamodels/: datacube.py  fitsfile.py  spectrumplus.py
src/visualastro/help/: help.py
src/visualastro/plotting/: ax.py  colors.py  image_plots.py  plot_utils.py  plots.py  spectra_plot_utils.py  spectra_plots.py  visual_plots.py
src/visualastro/plotting/base/: plots.py
src/visualastro/plotting/core/: axes.py  colormaps.py  colors.py  image_utils.py  interface.py  plot_utils.py  style.py  (+1 more)
src/visualastro/stylelib/: astro.mplstyle  cm.mplstyle  cmu.mplstyle  default.mplstyle  latex.mplstyle  sm.mplstyle  smplot.mplstyle  thorlabs.mplstyle
src/visualastro/utils/: fits_utils.py  text_utils.py  wcs_utils.py
tests/: conftest.py
tests/test_core/: test_config.py  test_io.py  test_numerical_utils.py  test_units.py  test_validation.py
tests/test_dataclasses/: test_datacube.py
tests/test_plotting/: test_image_utils.py  test_plot_utils.py
visualastro/: __init__.py  data_cube.py  data_cube_utils.py  io.py  numerical_utils.py  photometry.py  plot_utils.py  plotting.py  reduction.py  spectra.py  spectra_utils.py  visual_classes.py  visual_plots.py
visualastro/stylelib/: minimal.mplstyle
(+38 files in other folders)
